--- a/public/package.json
+++ b/public/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npm-run-all --parallel",
-    "build": "npm-run-all --parallel build:*",
+    "build": "npm-run-all --parallel copy:* build:*",
     "build:scripts": "webpack",
     "build:styles": "npm-run-all sass:build postcss:build",
     "build:images": "imagemin src/pics/*.{jpg,png} --out-dir=build",
+    "copy:fonts": "copyfiles src/fonts/**/* build --flat",
     "watch": "npm-run-all --parallel watch:*",
     "watch:scripts": "webpack --watch",
     "watch:styles": "npm-run-all --parallel sass:watch postcss:watch",
@@ -58,6 +59,7 @@
     "countup.js": "^2.0.7",
     "foundation-sites": "^6.6.3",
     "jquery": "^3.6.0",
+    "jquery-circle-progress": "^1.2.2",
     "regenerator-runtime": "^0.13.7",
     "swiper": "^6.5.0",
     "what-input": "^5.2.10"
