--- a/.env
+++ b/.env
@@ -17,3 +17,12 @@
 APP_ENV=dev
 APP_SECRET=1afff7a05d43c61baf50be22e661cb80
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/susanoo?serverVersion=mariadb-10.4.11"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/todos?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
