--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.12",
+        "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/http-foundation": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
