--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,5 +37,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/susanoo, roles: ROLE_ADMIN }
+         - { path: ^/susanoo, roles: [ROLE_ADMIN, ROLE_USER] }
         # - { path: ^/profile, roles: ROLE_USER }
