--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "type": "project",
+    "name": "shadown125/susanoo",
+    "type": "cms",
     "license": "proprietary",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -32,8 +33,11 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "^5.2",
+        "symfony/css-selector": "^5.2",
         "symfony/debug-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.30",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/stopwatch": "^5.2",
         "symfony/var-dumper": "5.2.*",
         "symfony/web-profiler-bundle": "^5.2"
