--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 ###< symfony/framework-bundle ###
 /public/node_modules/
 /.idea/
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
